# spm-git-swap

./: .gitignore  Cargo.toml  README.md
src/: main.rs  repo.rs  resolved.rs
