[package]
name = "spm-git-swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
simple_logger = "4.3.3"
thiserror = "1.0.58"
log = "0.4.21"
once_cell = "1.19.0"
serde_json = "1.0.114"
glob = "0.3.1"
git2 = "0.18.3"
zip = "0.6.6"
zip-extensions = "0.6.2"
structopt = "0.3.26"